log
Fri 08 Sep 2023 10:11:16 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:13: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap * map = (HashMap *) malloc(capacity*sizeof(HashMap));
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
4829d33
Fri 08 Sep 2023 10:26:38 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
24542ed
Fri 08 Sep 2023 10:35:34 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:58:17: error: ‘*map.capacity’ is used uninitialized [-Werror=uninitialized]
   58 |   map->capacity *= capacity;
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
47133b1
Fri 08 Sep 2023 10:35:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
642d496
Fri 08 Sep 2023 10:36:47 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
dea7c8c
Fri 08 Sep 2023 10:40:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
559603a
Fri 08 Sep 2023 10:58:14 PM UTC: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:11: error: too few arguments to function ‘hash’
   44 |   int i = hash(key) % map->capacity;
      |           ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:49:15: error: expected expression before ‘:’ token
   49 |         return:
      |               ^
hashmap.c:49:15: error: ‘return’ with a value, in function returning void [-Werror=return-type]
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
hashmap.c:55:19: error: expected ‘;’ before ‘:’ token
   55 |   map->current = i:
      |                   ^
      |                   ;
cc1: all warnings being treated as errors
Compilation failed
7598e81
Fri 08 Sep 2023 10:58:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:11: error: too few arguments to function ‘hash’
   44 |   int i = hash(key) % map->capacity;
      |           ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:49:15: error: expected expression before ‘:’ token
   49 |         return:
      |               ^
hashmap.c:49:15: error: ‘return’ with a value, in function returning void [-Werror=return-type]
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c338d2c
